Use keyword instead of site address for my version.

--- a/site/index.html
+++ b/site/index.html
@@ -43,7 +43,7 @@ Please enable Javascript to use this
 <tr>
 <td class="stepList">
 <div class="step" id="theSiteDomain">
-<h3>Site Address</h3>
+<h3>Keyword</h3>
 <p><input type="text" name="domain"></p>
 </div>
 <div class="step" id="theSitePassword">
